[tool.poetry]
name = "rbpodo-companion"
version = "0.1.0"
description = ""
authors = ["messy-snail <hskang.py@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.0.1"
pyside6 = "^6.9.1"
rbpodo = { path = "third-party/rbpodo" }
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
